# stealth-chrome-devtools-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  HIGH_VALUE_CHANGES.md  LICENSE  MCP_TOOL_TEST_RESULTS.md  README.md  RUNBOOK.md  mcp.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml  test.yml
.husky/: pre-commit  pre-push
audit/: ADDENDUM_LENSES.md  GATES_TASK_OPUS.md  REPORT.md  RESUME.md  STAGE2_BRIEF.md  STAGE2_RESUME_PROMPT.md  STAGE3_RESUME_PROMPT.md  TRIAGE.md  dep_audit_2026-07-07.md  findings.json  state.json
audit/prior/: CODEBASE_AUDIT.md  claims.json  claims_verdicts.json  summary.md
audit/reaudit/: NEW_FINDINGS_sweep.json  REPORT.md  verdicts_critical.json  verdicts_logbm.json  verdicts_misc.json  verdicts_procstore.json  verdicts_server.json
audit/stage0/: metrics.md  run_exits.txt  test_baseline.json  test_baseline_notes.md  tooling.json
audit/stage1/: LENS_DELTA.md  adv_targets_arch.json  adv_targets_ops.json  adversarial_targets.json  change_trace.md  deepdive_cloner.md  deepdive_codeexec.md  deepdive_lifecycle.md  deepdive_server.md  deepdive_state.md  findings_all.json  findings_change_trace.json  findings_dd1.json  findings_dd2.json  findings_dd3.json  findings_dd4.json  findings_dd5.json  findings_final.json  findings_incident.json  findings_lens_clarity.json  findings_lens_conventions.json  findings_lens_duplication.json  findings_lens_modularity.json  findings_onboarding.json  findings_premortem.json  findings_prior.json  findings_verified.json  hotspot_agreement.md  hotspots_A.json  hotspots_B.json  incident_trace.md  onboarding_trace.md  orchestrator_notes.md  premortem.md
audit/stage1/adversarial/: adv_arch.json  adv_ops.json
audit/stage1/verify/: chunk_1.json  chunk_2.json  chunk_3.json  chunk_4.json  chunk_5.json  chunk_6.json  chunk_7.json  chunk_8.json  verdicts_1.json  verdicts_2.json  verdicts_3.json  verdicts_4.json  verdicts_5.json  verdicts_6.json  verdicts_7.json  verdicts_8.json  verdicts_merged.json
audit/stage2/: HANDOFF_RELEASE_coverage_validation.md  TRIAGE_final-review_to_plan_RELEASE.md  plan_E2E.md  plan_M1.md  plan_M11a_M15.md  plan_M12a.md  plan_M14.md  plan_M2.md  plan_M3.md  plan_M4ph1.md  plan_M5a.md  plan_M5b.md  plan_M6.md  plan_M7.md  plan_M8.md  plan_M9.md  plan_RELEASE.md  plan_RELEASE_FIX_TierA.md
examples/: claude.mcp.json  codex.config.toml
src/stealth_chrome_devtools_mcp/: __init__.py  __main__.py  cli.py  observability.py  server.py  settings.py
src/stealth_chrome_devtools_mcp/embedded/: __init__.py  browser_manager.py  cdp_element_cloner.py  cdp_function_executor.py  clone_storage.py  comprehensive_element_cloner.py  debug_logger.py  dom_handler.py  dynamic_hook_ai_interface.py  dynamic_hook_system.py  element_cloner.py  element_resolution.py  file_based_element_cloner.py  hook_learning_system.py  in_memory_storage.py  logging_setup.py  models.py  network_interceptor.py  persistent_storage.py  platform_utils.py  process_cleanup.py  progressive_element_cloner.py  proxy_forwarder.py  proxy_utils.py  python_binding.py  response_handler.py  response_stage_hooks.py  server.py  singleton.py  tool_errors.py  tool_registry.py
tests/: MANUAL_QA_PROTOCOL.md  conftest.py  e2e_helpers.py  fakes.py  stress_memory_leak.py  test_backend_liveness_probe.py  test_backend_logging.py  test_browser_background_tasks.py  test_browser_integration.py  test_bug_prone_tools.py  test_cdp_element_cloner.py  test_cdp_timeout.py  test_check_suppression_owners.py  test_cli.py  test_cli_status_wedged.py  test_clone_legacy_marker_classification.py  test_clone_output_dir.py  test_clone_storage.py  test_clone_storage_cap.py  test_clone_sweep_race.py  test_clone_trash_recovery.py  test_cloner_schemas.py  test_close_instance_offload.py  test_close_noise_filter.py  test_correlation_id.py  test_debug_logger.py  test_debug_logger_debug_level.py  test_debug_logger_file_bridge.py  test_doc_claims.py  test_dom_handler.py  test_dynamic_hook_system.py  test_e2e_data_tools.py  test_e2e_functions_hooks.py  test_e2e_hard_dom.py  test_e2e_interaction.py  test_e2e_interaction_fidelity.py  test_element_cloner_output_dir.py  test_element_resolution.py  test_exception_handling.py  test_execute_script_guard.py  (+46 more)
tests/fixture_app/: app.js  cookies.html  extract.html  hard_dom.html  hooks.html  iframe_child.html  index.html  interact.html  interactions.html  network.html  styles.css
tests/goldens/: canonical_engine.json  cdp_complete_element.json  comprehensive_complete_element.json  element_cloner_clone_complete.json  extract_element_structure_list_convert.json  extract_element_styles.json  file_based_structure_to_file.json  progressive_expand_styles.json  progressive_list_stored_elements.json
tools/: check_file_budgets.py  check_suppression_owners.py  vulture_allowlist.py
