[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stealth-chrome-devtools-mcp"
version = "1.1.0"
description = "Undetectable browser automation for AI agents via the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Devino Solutions", email = "amin@devino.ca" },
]
keywords = ["mcp", "browser-automation", "stealth", "chrome-devtools", "anti-bot", "cdp", "nodriver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp==2.11.2",
    "nodriver==0.47.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.1",
    "jsbeautifier==1.15.4",
    "strinpy==0.0.4",
    "strbuilder==1.1.3",
    "psutil==7.0.0",
    "pillow==11.3.0",
    "requests>=2.32.0",
    "uvicorn[standard]==0.35.0",
]

[project.urls]
Homepage = "https://github.com/DevinoSolutions/stealth-chrome-devtools-mcp"
Repository = "https://github.com/DevinoSolutions/stealth-chrome-devtools-mcp"
Issues = "https://github.com/DevinoSolutions/stealth-chrome-devtools-mcp/issues"

[project.scripts]
stealth-chrome-devtools-mcp = "stealth_chrome_devtools_mcp.server:main"
stealth-chrome-devtools = "stealth_chrome_devtools_mcp.cli:main"

[project.optional-dependencies]
transpiler = [
    "py2js>=1.2.1",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that spawn real browsers (need Chrome installed)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stealth_chrome_devtools_mcp"]
# NOTE: do not add a force-include for embedded/js here. Those files are tracked
# and live inside the package, so `packages` already bundles them; force-including
# the same path makes hatchling fail the wheel build with a duplicate-file error
# (which only surfaces when uvx/pip builds the wheel, not under `uv run`).
