[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stealth-chrome-devtools-mcp"
version = "1.2.0"
description = "Undetectable browser automation for AI agents via the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [
    { name = "Devino Solutions", email = "amin@devino.ca" },
]
keywords = ["mcp", "browser-automation", "stealth", "chrome-devtools", "anti-bot", "cdp", "nodriver"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "fastmcp==2.11.2",
    "nodriver==0.47.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.1.1",
    "jsbeautifier==1.15.4",
    "strinpy==0.0.4",
    "strbuilder==1.1.3",
    "psutil==7.0.0",
    "pillow==11.3.0",
    "requests>=2.32.0,<4",
    "uvicorn[standard]==0.35.0",
]

[project.urls]
Homepage = "https://github.com/DevinoSolutions/stealth-chrome-devtools-mcp"
Repository = "https://github.com/DevinoSolutions/stealth-chrome-devtools-mcp"
Issues = "https://github.com/DevinoSolutions/stealth-chrome-devtools-mcp/issues"

[project.scripts]
stealth-chrome-devtools-mcp = "stealth_chrome_devtools_mcp.server:main"
stealth-chrome-devtools = "stealth_chrome_devtools_mcp.cli:main"

[project.optional-dependencies]
transpiler = [
    "py2js>=1.2.1",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that spawn real browsers (need Chrome installed)",
]
# Coverage is intentionally NOT in addopts: enabling it globally would slow
# every single-file TDD run and trip --cov-fail-under on partial runs. CI turns
# it on explicitly (see .github/workflows/test.yml).

[tool.coverage.run]
source = ["src/stealth_chrome_devtools_mcp"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/stealth_chrome_devtools_mcp"]
# NOTE: do not add a force-include for embedded/js here. Those files are tracked
# and live inside the package, so `packages` already bundles them; force-including
# the same path makes hatchling fail the wheel build with a duplicate-file error
# (which only surfaces when uvx/pip builds the wheel, not under `uv run`).

# ---------------------------------------------------------------------------
# Code-quality gates (workstream 2.5-gates). The full lint ruleset, banned-API
# table, ty/vulture config, and per-file owner-tagged ignores are added in the
# commits that follow this repo-wide `ruff format` baseline.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# Curated ruleset - every group maps to a verified audit finding (2.5-gates task
# section 2). Loud-error / Sentry-capturability chain: E722 + BLE001, S110/S112,
# B (incl B904 raise-from), TRY (minus TRY003, incl TRY400 logging.exception),
# LOG + G (incl G201). ASYNC = blocking calls on the loop. ANN401 = no typing.Any.
# PGH = anti-hack (no bare noqa / un-coded type:ignore). TID = banned-api below.
select = [
    "F", "E", "W", "I", "N", "UP", "C4", "PIE", "SIM", "RET", "RSE", "A",
    "PTH", "PERF", "FURB", "RUF", "BLE", "S", "B", "TRY", "LOG", "G", "ASYNC",
    "T10", "T20", "ERA", "DTZ", "ANN", "ARG", "TC", "INP", "PGH", "PL", "C90",
    "TID",
]
# Deliberately NOT enabled (silence must be a decision - 2.5-gates task section 2):
#   TRY003 + EM101/102/103 - they fight the APPROVED M4-A1 error-envelope idiom
#     `raise ToolError("<message>")` (~55 sites land exactly that shape; linting
#     against it would be a rule that lies).
#   D (docstrings) - M14 owns the doc surface; revisit after it lands.
#   FBT - semantic-default bugs (F-745) are not lintable; churn without an owner.
#   COM / Q / ISC - the formatter owns those.
#   FIX / TD - debt lives in the audit ledger (M14), not in TODO-comment policing.
# E501/line-length IS enforced (human directive 2026-07-06).
ignore = ["TRY003"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-tidy-imports]
# Matches the approved M4-Ph1 STEP-0 absolute-imports design.
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Repo-specific bans - each msg cites the finding and the sanctioned alternative.
"subprocess.DEVNULL".msg = "F-303/F-503: DEVNULL spawn hid every backend crash. Use the M3 logging spawn helper; the current spawn site is owner-tagged plan_M3 until it lands."
"os.getenv".msg = "F-720/F-763: env access has ONE home - settings.get_settings(). Add a typed field to the Settings model."
"os.environ".msg = "F-720/F-763: env access has ONE home - settings.get_settings(). Add a typed field to the Settings model."
"typing.Any".msg = "No typing.Any (ANN401 + the no-Any mandate). Use precise types / object / protocols; ty is the source of truth."
"asyncio.get_event_loop".msg = "Deprecated; use asyncio.get_running_loop()."

[tool.ruff.lint.per-file-ignores]
"src/stealth_chrome_devtools_mcp/cli.py" = ["T20"]  # PERMANENT(print is the CLI's UI)
"tests/**" = ["S101", "ANN", "PLR2004", "ARG", "S105", "S106", "S107", "INP001"]  # PERMANENT(pytest idioms: assert, no annotations, magic values, unused fixtures, fake secrets, non-package dir)
